style.css
/* ===== Google Font Import - Poppins ===== */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: "Poppins", sans-serif;
}
body {
	min-height: 100vh;
	display: flex;
	align-items: center;
	justify-content: center;
	background: #121212;
}
.container {
	position: relative;
	max-width: 900px;
	width: 100%;
	border-radius: 6px;
	padding: 30px;
	margin: 0 15px;
	background-color: #fff;
	box-shadow: 0 5px 10px rgba(216, 216, 216, 0.1);
}
.container header {
	position: relative;
	font-size: 20px;
	font-weight: 600;
	color: #333;
}
.container header::before {
	content: "";
	position: absolute;
	left: 0;
	bottom: -2px;
	height: 3px;
	width: 27px;
	border-radius: 8px;
	background-color: #3700b3;
}
.container form {
	position: relative;
	margin-top: 16px;
	min-height: 490px;
	background-color: #fff;
	overflow-y: auto;
	overflow-x: hidden;
}
.container form .form {
	position: absolute;
	background-color: #fff;
	transition: 0.3s ease;
}
.container form .form.second {
	opacity: 0;
	pointer-events: none;
	transform: translateX(100%);
}
form.secActive .form.second {
	opacity: 1;
	pointer-events: auto;
	transform: translateX(0);
}
form.secActive .form.first {
	opacity: 0;
	pointer-events: none;
	transform: translateX(-100%);
}
.container form .title {
	display: block;
	margin-bottom: 8px;
	font-size: 16px;
	font-weight: 500;
	margin: 6px 0;
	color: #333;
}
.container form .fields {
	display: flex;
	align-items: center;
	justify-content: space-between;
	flex-wrap: wrap;
}
form .fields .input-field {
	display: flex;
	width: calc(100% / 3 - 15px);
	flex-direction: column;
	margin: 4px 0;
}
.input-field label {
	font-size: 12px;
	font-weight: 500;
	color: #2e2e2e;
}
.input-field input,
select {
	outline: none;
	font-size: 14px;
	font-weight: 400;
	color: #333;
	border-radius: 5px;
	border: 1px solid #aaa;
	padding: 0 15px;
	height: 42px;
	margin: 8px 0;
}
.input-field input :focus,
.input-field select:focus {
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.13);
}
.input-field select,
.input-field input[type="date"] {
	color: #707070;
}
.input-field input[type="date"]:valid {
	color: #333;
}
.input-field input[type="tel"]:valid {
  color: green;
}
.input-field input[type="tel"]:invalid {
  color: red;
}
.container form button,
.backBtn {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 45px;
	max-width: 200px;
	width: 100%;
	border: none;
	outline: none;
	color: #fff;
	border-radius: 5px;
	margin: 25px 0;
	background-color: #3700b3;
	transition: all 0.3s linear;
	cursor: pointer;
}
.container form .btnText {
	font-size: 14px;
	font-weight: 400;
}
form button:hover {
	background-color: #265df2;
}
form button i,
form .backBtn i {
	margin: 0 6px;
}
form .backBtn i {
	transform: rotate(180deg);
}
form .buttons {
	display: flex;
	align-items: center;
}
form .buttons button,
.backBtn {
	margin-right: 14px;
}

/* Photo Upload */
.file-upload {
	display: block;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
}
.file-upload .file-select {
	display: block;
	border: 2px solid #dce4ec;
	color: #34495e;
	cursor: pointer;
	height: 40px;
	line-height: 40px;
	text-align: left;
	background: #ffffff;
	overflow: hidden;
	position: relative;
}
.file-upload .file-select .file-select-button {
	background: #dce4ec;
	padding: 0 10px;
	display: inline-block;
	height: 40px;
	line-height: 40px;
}
.file-upload .file-select .file-select-name {
	line-height: 40px;
	display: inline-block;
	padding: 0 10px;
}
.file-upload .file-select:hover {
	border-color: #34495e;
	transition: all 0.2s ease-in-out;
	-moz-transition: all 0.2s ease-in-out;
	-webkit-transition: all 0.2s ease-in-out;
	-o-transition: all 0.2s ease-in-out;
}
.file-upload .file-select:hover .file-select-button {
	background: #34495e;
	color: #ffffff;
	transition: all 0.2s ease-in-out;
	-moz-transition: all 0.2s ease-in-out;
	-webkit-transition: all 0.2s ease-in-out;
	-o-transition: all 0.2s ease-in-out;
}
.file-upload.active .file-select {
	border-color: #3fa46a;
	transition: all 0.2s ease-in-out;
	-moz-transition: all 0.2s ease-in-out;
	-webkit-transition: all 0.2s ease-in-out;
	-o-transition: all 0.2s ease-in-out;
}
.file-upload.active .file-select .file-select-button {
	background: #3fa46a;
	color: #ffffff;
	transition: all 0.2s ease-in-out;
	-moz-transition: all 0.2s ease-in-out;
	-webkit-transition: all 0.2s ease-in-out;
	-o-transition: all 0.2s ease-in-out;
}
.file-upload .file-select input[type="file"] {
	z-index: 100;
	cursor: pointer;
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	opacity: 0;
	filter: alpha(opacity=0);
}
.file-upload .file-select.file-select-disabled {
	opacity: 0.65;
}
.file-upload .file-select.file-select-disabled:hover {
	cursor: default;
	display: block;
	border: 2px solid #dce4ec;
	color: #34495e;
	cursor: pointer;
	height: 40px;
	line-height: 40px;
	margin-top: 5px;
	text-align: left;
	background: #ffffff;
	overflow: hidden;
	position: relative;
}
.file-upload .file-select.file-select-disabled:hover .file-select-button {
	background: #dce4ec;
	color: #666666;
	padding: 0 10px;
	display: inline-block;
	height: 40px;
	line-height: 40px;
}
.file-upload .file-select.file-select-disabled:hover .file-select-name {
	line-height: 40px;
	display: inline-block;
	padding: 0 10px;
}

@media (max-width: 750px) {
	.container form {
		overflow-y: scroll;
	}
	.container form::-webkit-scrollbar {
		display: none;
	}
	form .fields .input-field {
		width: calc(100% / 2 - 15px);
	}
}

@media (max-width: 550px) {
	form .fields .input-field {
		width: 100%;
	}
}

